# src/types/index.ts
@@ -3,7 +3,9 @@ export * from './common/rpc-error';
 export * from './common/base-of-number';
 
 export * from './rpc-service/relay-info';
-export * from './rpc-service/fee-info';
-export * from './rpc-service/tx-info';
+export * from './rpc-service/tx-fee-query';
+export * from './rpc-service/tx-fee-result';
+export * from './rpc-service/tx-estimate-gas-query';
+export * from './rpc-service/tx-send-query';
 
 export * from './gas-service/gas-settings';
