# src/types/rpc-service/fee-info.ts
@@ -1,4 +1,0 @@
-export interface FeeInfo {
-  token: string;
-  approvalData: string;
-}
