# src/types/rpc-service/tx-info.ts
@@ -1,8 +1,0 @@
-export interface TxInfo {
-  from: string;
-  to: string;
-  gas: string;
-  nonce: string;
-  deadline: string;
-  data: string;
-}
