# src/types/rpc-service/tx-send-query.ts
@@ -1,0 +1,20 @@
+export interface TxSendQueryFee {
+  token: string;
+  approvalData: string;
+}
+
+
+export interface TxSendQueryInfo {
+  from: string;
+  to: string;
+  gas: string;
+  nonce: string;
+  deadline: string;
+  data: string;
+}
+
+export interface TxSendQuery {
+  tx: TxSendQueryInfo;
+  fee: TxSendQueryFee;
+  signature: string;
+}
